--- a/reportmodule/pom.xml
+++ b/reportmodule/pom.xml
@@ -4,23 +4,44 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>reportmodule</artifactId>
-  <version>10.37.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>CTP : ResponseManagement : ReportModule</name>
-  <description>CTP : ResponseManagement : ReportModule</description>
+  <name>CTP : Reporting: ReportModule</name>
+  <description>CTP : Reporting: ReportModule</description>
 
   <parent>
     <groupId>uk.gov.ons.ctp.product</groupId>
-    <artifactId>responsemanagement</artifactId>
-    <version>10.37.0-SNAPSHOT</version>
+    <artifactId>reporting</artifactId>
+    <version>10.38.0-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
   <dependencies>
+
+    <dependency>
+      <groupId>uk.gov.ons.ctp.common</groupId>
+      <artifactId>framework</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>ma.glasnost.orika</groupId>
+      <artifactId>orika-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>ma.glasnost.orika</groupId>
+      <artifactId>orika-eclipse-tools</artifactId>
     </dependency>
 
     <dependency>
