--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:git:git@192.168.11.106:ctp/rm-reportmodule.git</connection>
-    <developerConnection>scm:git:git@192.168.11.106:ctp/rm-reportmodule.git</developerConnection>
-    <url>scm:git:git@192.168.11.106:ctp/rm-reportmodule.git</url>
+    <connection>scm:git:git@github.com:ONSdigital/rm-reportmodule.git</connection>
+    <developerConnection>scm:git:git@github.com:ONSdigital/rm-reportmodule.git</developerConnection>
+    <url>git@github.com:ONSdigital/rm-reportmodule.git</url>
   </scm>
 
   <build>
