--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-eclipse-tools</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.cobertura</groupId>
+      <artifactId>cobertura</artifactId>
+    </dependency>
+
   </dependencies>
 
   <scm>
