--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,6 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>uk.gov.ons.ctp.product</groupId>
   <artifactId>reportmodule</artifactId>
   <version>10.49.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -19,7 +18,7 @@
   <parent>
     <groupId>uk.gov.ons.ctp.product</groupId>
     <artifactId>rm-common-config</artifactId>
-    <version>10.49.2</version>
+    <version>10.49.8</version>
   </parent>
 
   <dependencies>
@@ -63,9 +62,9 @@
   </dependencies>
 
   <scm>
-    <connection>scm:git:git@github.com:ONSdigital/rm-reportmodule.git</connection>
-    <developerConnection>scm:git:git@github.com:ONSdigital/rm-reportmodule.git</developerConnection>
-    <url>git@github.com:ONSdigital/rm-reportmodule.git</url>
+    <connection>scm:git:https://github.com/ONSdigital/rm-reportmodule</connection>
+    <developerConnection>scm:git:https://github.com/ONSdigital/rm-reportmodule</developerConnection>
+    <url>https://github.com/ONSdigital/rm-reportmodule</url>
   </scm>
 
   <build>
