--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <description>CTP : ReportModule</description>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <spring.boot.version>1.5.6.RELEASE</spring.boot.version>
   </properties>
 
     <!-- Inherit parent BOM to control versions of dependencies and plugin version & config -->
@@ -24,38 +23,45 @@
     <dependency>
       <groupId>uk.gov.ons.ctp.common</groupId>
       <artifactId>framework</artifactId>
+      <version>10.49.8</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>9.4.1212.jre7</version>
       <scope>runtime</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
+      <version>${spring.boot.version}</version>
       <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-eclipse-tools</artifactId>
+      <version>1.5.1</version>
     </dependency>
 
     <dependency>
       <groupId>net.sourceforge.cobertura</groupId>
       <artifactId>cobertura</artifactId>
+      <version>2.1.1</version>
     </dependency>
 
   </dependencies>
